# jobee

./: .gitignore  README.md  docker-compose.yaml
api/: Dockerfile  __init__.py  job_service.py  package-lock.json  package.json  pyproject.toml  server.py  tasks.py  vercel.json
api/db/: models.py
api/job_analyst/: match_agent.py  sort_agent.py
api/job_analyst/prompt/: job_match_few_shot.py  job_match_few_shot_cot.py  job_sort_few_shot.py
api/job_crawl/: crawler.py  google.py  indeed.py
api/job_crawl/params_agent/: agent.py
api/job_crawl/params_agent/prompt/: gen_crawling_params_few_shot.py
api/job_service/: job_service.py  job_service_test.py
api/prisma/: schema.prisma
api/prisma/migrations/20240619171800_init/: migration.sql
api/src/: app.controller.ts  app.module.ts  app.service.ts  main.ts
api/src/agents/company_summary/: agent.ts
api/src/auth/: auth.controller.ts  auth.module.ts  auth.service.ts  google-auth-service.ts  jwt.strategy.ts  local.strategy.ts
api/src/geo/: abbreviation.ts  geo.controller.ts  geo.service.ts
api/src/job/: job.controller.spec.ts  job.controller.ts  job.module.ts  job.service.ts
api/src/job-crawler/: google.ts  job.html  test.ts  types.ts
api/src/organization/: organization.controller.ts  organization.service.ts
api/src/resume/: resume.controller.ts  resume.module.ts  resume.service.ts
api/src/user/: user.controller.ts  user.module.ts  user.service.ts
api/test/: job_service_test.py
api/user_profile/: resume.txt  user_profile_summarization_agent.py
api/user_profile/prompt/: summarize_user_profile.py
(+73 files in other folders)
